tela detalhes animal e tela de doacao funcionais

--- a/strayhero/src/app/components/botoes-principal/botoes-principal.component.html
+++ b/strayhero/src/app/components/botoes-principal/botoes-principal.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <img src="../../../assets/Adicionar-pet.png" class="container__adicionarAnimal" [routerLink]="['/']" >
+  <img src="../../../assets/Adicionar-pet.png" class="container__adicionarAnimal" (click)="funcaoNaoImple()" >
   <img src="../../../assets/Menu.png" class="container__menu" (click)="logout()">
-  <img src="../../../assets/Notificacao.png" class="container__notificacoes" [routerLink]="['/']">
+  <img src="../../../assets/Notificacao.png" class="container__notificacoes" (click)="funcaoNaoImple()" >
 </div>
