--- a/strayhero/src/app/components/tela-doar-para-ong/tela-doar-para-ong.component.html
+++ b/strayhero/src/app/components/tela-doar-para-ong/tela-doar-para-ong.component.html
@@ -5,12 +5,12 @@
     <img src="../../../assets/grupo-animal2.png" alt="" class="container__detalhes__imagem2">
   </div>
 
-  <button class="container__botaoDoar">DOE AGORA</button>
+  <button class="container__botaoDoar" (click)="doar()" >DOE AGORA</button>
 
   <div class="container__descricao">
-    <p class="container__descricao__texto"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam magni corrupti, laborum blanditiis, facere alias tenetur quisquam deserunt voluptatem assumenda dolores accusantium doloribus voluptatem assumenda dolores accusantium doloribus necessitatibus modi beatae nam, ipsum harum nihil.</p>
+    <p class="container__descricao__texto">Doe a partir de 2 reais agora e ganhe moedas! Além das moedas no jogo você estará ajudando a ONG Pata voluntária a manter mais de 1000! =D</p>
   </div>
 
-  <button class="container__botaoVoltar">VOLTAR</button>
+  <button class="container__botaoVoltar" (click)="botVoltar()">VOLTAR</button>
 
 </div>
