--- a/strayhero/src/app/components/tela-inicio/tela-inicio.component.html
+++ b/strayhero/src/app/components/tela-inicio/tela-inicio.component.html
@@ -1,8 +1,6 @@
 <div class="container">
   <!-- <div class="container__balao"></div> -->
   <div class="container__imagem">
-    <button class="container__imagem__botao">ADOTAR AGORA</button>
+    <button class="container__imagem__botao" (click)="adotar()">ADOTAR AGORA</button>
   </div>
-  
-  
 </div>
