--- a/strayhero/src/app/components/caixa-dialogo1/caixa-dialogo1.component.scss
+++ b/strayhero/src/app/components/caixa-dialogo1/caixa-dialogo1.component.scss
@@ -41,29 +41,17 @@ $Cinza: #222222;
 }
 
 .dialogo1{
-    width: 330px;
+    width: 90%;
     height: 90px;
     margin: auto;
-
-    // .container{
-
-    //     background-color: #1759b1;
-    //     width: 50px;
-    //     height: 50px;
-    //     border-radius: 50px 25px 45px 25px;
-    //     position: absolute;
-    //     z-index: 2;
+    position: relative;
 
     .dialogo1__img{
         position: absolute;
         width: 85px;
         z-index: 2;
-        transform: translateX(250px);
-        animation: animacao-dialogo1 2s infinite;
+        right: 0;
     }
-
-    // }
-
     
 
     .dialogo1__textcontainer{
