--- a/strayhero/src/app/components/tela-cadastro/tela-cadastro.component.scss
+++ b/strayhero/src/app/components/tela-cadastro/tela-cadastro.component.scss
@@ -1,6 +1,10 @@
 .background{
-    height: 667px;
+    height: 100vh;
+    width: 100vw;
     background-color: #e5e5e5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .container{
