--- a/strayhero/src/app/components/tela-login/tela-login.component.html
+++ b/strayhero/src/app/components/tela-login/tela-login.component.html
@@ -1,6 +1,6 @@
 <div class="background">
   <div class="container">
-    <!-- <div class="gambiarra"></div> -->
+    <div class="gambiarra"></div>
     <app-caixa-dialogo1></app-caixa-dialogo1>
     <app-login-form></app-login-form>
   </div>
