ajustes na animação e icones

--- a/strayhero/src/app/components/barra-equilibrio/barra-equilibrio.component.html
+++ b/strayhero/src/app/components/barra-equilibrio/barra-equilibrio.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="container__recursos">
-      <img src="../../../assets/recursos.png">
+      <img src="../../../assets/recursos (1).png">
       <div class="container__recursos__nome">Recursos</div>
   </div>
 
@@ -23,7 +23,7 @@
   
 
   <div class="container__cuidados">
-    <img src="../../../assets/populacao.png">
+    <img src="../../../assets/populacao (1).png">
     <div class="container__cuidados__nome">Cuidados</div>
   </div>
 
