--- a/strayhero/src/app/components/animal/animal.component.scss
+++ b/strayhero/src/app/components/animal/animal.component.scss
@@ -1,4 +1,4 @@
-@keyframes anim{
+@keyframes anim-triste{
     from{
         background-position: 0px;
     }
@@ -8,10 +8,21 @@
 }
 
 .dog1{
-    background: url('../../../assets/animacoes/animação3-08.png');
     width: 50px;
     height: 50px;
-    animation: anim 3s steps(7) infinite;
+    animation: anim-triste 3s steps(7) infinite;
+}
+
+.animal-triste{
+    background: url('../../../assets/animacoes/animação3-08.png');
+}
+
+.animal-normal{
+    background: url('../../../assets/animacoes/animação2-08.png');
+}
+
+.animal-feliz{
+    background: url('../../../assets/animacoes/animação1.png');
 }
 
 .animal-container{
