--- a/strayhero/src/app/components/feedback-atencao-animal/feedback-atencao-animal.component.html
+++ b/strayhero/src/app/components/feedback-atencao-animal/feedback-atencao-animal.component.html
@@ -1,3 +1,3 @@
 <div class="container">
-  <!-- <img class="container__imagem" src="../../../assets/Notificacao.png"> -->
+  <img class="container__imagem" src="../../../assets/{{imagem}}">
 </div>
